# exsemantica

./: '  .formatter.exs  .gitignore  .mise.toml  .tool-versions  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  index.md  mix.exs  package-lock.json  pub_sub.ex
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
apps/cloudclone/: .formatter.exs  .gitignore  README.md  mix.exs
apps/exsemantica/: .gitignore  README.md  mix.exs
apps/exsemantica_api/: .gitignore  README.md  mix.exs
apps/exsemantica_phx/: .gitignore  README.md  mix.exs
apps/exsemantica_web/: .gitignore  README.md  mix.exs
apps/exsemtheme/: .gitignore  README.md  mix.exs
apps/extimeago/: .gitignore  README.md  mix.exs
apps/ld_graph2/: .gitignore  README.md  mix.exs
apps/ld_graph2/native/ld_graph2_port/: Cargo.toml
apps/ld_graph2/native/ld_graph2_port/src/: main.rs  multitree.rs  tree.rs
apps/ld_graph2/native/ld_graph2_port/src/tree/: node.rs  query.rs  reply.rs
apps/ld_graphstore/: .gitignore  README.md  mix.exs
apps/webserver/: README.md  mix.exs
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css
assets/js/: app.js  user_socket.js
assets/templates/: indigo_child-error.html.eex  indigo_child-front.html.eex  indigo_child-frontpage.html.eex
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  runtime.exs  test.exs
lib/: exirchatterd.ex  exsemantica.ex  exsemantica_web.ex  exsemnesia.ex
lib/exirchatterd/: dial.ex  (+6 more)
priv/: .gitignore  snake.pem  snake.public.pem  snake.request.pem
test/: test_helper.exs
(+316 files in other folders)
