[package]
name = "ld_graph2_port"
version = "0.2.0"
authors = ["Roland Metivier <metivier.roland@chlorophyt.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erlang_port = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_eetf = "0.2"
